--- a/style.css
+++ b/style.css
@@ -323,6 +323,10 @@ a {
   transition: 0.3s color ease-out;
 }
 
+#registerButton:hover{
+  color:white !important;
+}
+
 a:hover {
   color: var(--dark-color);
 }
