--- a/stepx/src/main/resources/templates/index.html
+++ b/stepx/src/main/resources/templates/index.html
@@ -12,8 +12,8 @@
   <meta name="keywords" content="Online Store">
   <meta name="description" content="StepX">
 
-  <link rel="stylesheet" href="css/vendor.css">
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" href="stepx/src/main/resources/static/css/vendor.css">
+  <link rel="stylesheet" type="text/css" href="stepx/src/main/resources/static/css/style.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -1102,9 +1102,10 @@
       </div>
     </div>
   </footer>
-  <script src="js/jquery-1.11.0.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/script.js"></script>
+
+  <script src="stepx/src/main/resources/static/js/jquery-1.11.0.min.js"></script>
+  <script>src="stepx/src/main/resources/static/js/plugins.js"</script>
+  <script src="stepx/src/main/resources/static/js/script.js"></script>
 </body>
 
 </html>
