footer in html templates

--- a/stepx/src/main/resources/templates/profile.html
+++ b/stepx/src/main/resources/templates/profile.html
@@ -454,6 +454,8 @@
   </section>
 
   <!-- Include your footer here -->
+  {{>footer}}
+  
   <script src="js/script.js"></script>
   <script src="js/jquery-1.11.0.min.js"></script>
   <script src="js/plugins.js"></script>
