--- a/stepx/src/main/resources/templates/single-product.html
+++ b/stepx/src/main/resources/templates/single-product.html
@@ -822,63 +822,7 @@
     </div>
   </section>
 
-  <footer id="footer" class="py-5 border-top">
-    <div class="container-lg">
-      <div class="row">
-        <div class="col-lg-2 pb-3">
-          <div class="footer-menu">
-            <h5 class="widget-title pb-2">Info</h5>
-            <ul class="menu-list list-unstyled">
-              <li class="pb-2">
-                <a href="#">Privacy policy</a>
-              </li>
-              <li class="pb-2">
-                <a href="#">Contact Us</a>
-              </li>
-              <li class="pb-2">
-                <a href="#">Help</a>
-              </li>
-              <li class="pb-2">
-                <a href="#">Community</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-lg-2 pb-3">
-          <div class="footer-menu">
-            <h5 class="widget-title pb-2">About</h5>
-            <ul class="menu-list list-unstyled">
-              <li class="pb-2">
-                <a href="#">Our Team</a>
-              </li>
-              <li class="pb-2">
-                <a href="#">Company</a>
-              </li>
-              <li class="pb-2">
-                <a href="#">Manufacture</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-lg-2 pb-3">
-          <div class="footer-menu">
-            <h5 class="widget-title pb-3">Get In Touch</h5>
-            <div class="footer-contact-text">
-              <span>StepX Store in Helseink Street, Gran Via - Madrid. </span>
-              <span> Call us: (+34) 7606 333 688 </span>
-              <span class="text-hover fw-bold light-border"><a
-                  href="mailto:contact@StepX.com">contact@StepX.com</a></span>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-6">
-          <p>© Copyright StepX 2025.</p>
-        </div>
-      </div>
-    </div>
-  </footer>
+  {{>footer}}
   <script src="js/jquery-1.11.0.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/script.js"></script>
