--- a/stepx/src/main/resources/templates/single-product.html
+++ b/stepx/src/main/resources/templates/single-product.html
@@ -12,9 +12,9 @@
   <meta name="keywords" content="Online Store">
   <meta name="description" content="Stylish - Shoes Online Store HTML Template">
 
-  <link rel="stylesheet" href="css/vendor.css">
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <link rel="stylesheet" type="text/css" href="starCss.css">
+  <link rel="stylesheet" href="/css/vendor.css">
+  <link rel="stylesheet" type="text/css" href="/css/style.css">
+  <link rel="stylesheet" type="text/css" href="/css/starCss.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -823,10 +823,10 @@
   </section>
 
   {{>footer}}
-  <script src="js/jquery-1.11.0.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/script.js"></script>
-  <script src="js/single-product.js"></script>
+  <script src="/js/jquery-1.11.0.min.js"></script>
+  <script src="/js/plugins.js"></script>
+  <script src="/js/script.js"></script>
+  <script src="/js/single-product.js"></script>
   
 </body>
 
