modifies in index and some getting maps in controller to redirect to other pages file images created in static

--- a/stepx/src/main/resources/templates/index.html
+++ b/stepx/src/main/resources/templates/index.html
@@ -30,10 +30,10 @@
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <div class="card d-flex flex-row align-items-end border-0 large jarallax-keep-img">
-              <img src="images/product-large-5.jpg" alt="shoes" class="img-fluid jarallax-img">
+              <img src="/images/product-large-5.jpg" alt="shoes" class="img-fluid jarallax-img">
               <div class="cart-concern p-3 m-3 p-lg-5 m-lg-5">
                 <h2 class="card-title display-3 light">Urban Shoes</h2>
-                <a href="shop.html"
+                <a href="/shop"
                   class="text-uppercase light mt-3 d-inline-block text-hover fw-bold light-border">Shop Now</a>
               </div>
             </div>
@@ -42,20 +42,20 @@
             <div class="row g-4">
               <div class="col-lg-12 mb-4">
                 <div class="card d-flex flex-row align-items-end border-0 jarallax-keep-img">
-                  <img src="images/card-large-item2.jpg" alt="shoes" class="img-fluid jarallax-img">
+                  <img src="/images/card-large-item2.jpg" alt="shoes" class="img-fluid jarallax-img">
                   <div class="cart-concern p-3 m-3 p-lg-5 m-lg-5">
                     <h2 class="card-title style-2 display-4 light">Sports Wear</h2>
-                    <a href="shop.html"
+                    <a href="/shop"
                       class="text-uppercase light mt-3 d-inline-block text-hover fw-bold light-border">Shop Now</a>
                   </div>
                 </div>
               </div>
               <div class="col-lg-12">
                 <div class="card d-flex flex-row align-items-end border-0 jarallax-keep-img">
-                  <img src="images/banner-image5.jpg" alt="shoes" class="img-fluid jarallax-img">
+                  <img src="/images/banner-image5.jpg" alt="shoes" class="img-fluid jarallax-img">
                   <div class="cart-concern p-3 m-3 p-lg-5 m-lg-5">
                     <h2 class="card-title style-2 display-4 light">Casual Shoes</h2>
-                    <a href="shop.html"
+                    <a href="/shop"
                       class="text-uppercase light mt-3 d-inline-block text-hover fw-bold light-border">Shop Now</a>
                   </div>
                 </div>
