--- a/stepx/src/main/resources/templates/register-user.html
+++ b/stepx/src/main/resources/templates/register-user.html
@@ -11,7 +11,7 @@
   <meta name="keywords" content="Online Store">
   <meta name="description" content="Stylish - Shoes Online Store HTML Template">
 
-  <link rel="stylesheet" href="css/vendor.css">
+  <link rel="stylesheet" href="/css/vendor.css">
   <link rel="stylesheet" type="text/css" href="/css/style.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -74,7 +74,7 @@
     </div>
   </section>
   
-  <script>
+    <script>
   function previewImage(input) {
     const preview = document.getElementById('imagePreview');
     const previewImg = document.getElementById('previewImage');
@@ -90,7 +90,7 @@
       reader.readAsDataURL(input.files[0]);
     }
   }
-  </script>
+    </script>
     <script src="/js/jquery-1.11.0.min.js"></script>
     <script src="/js/plugins.js"></script>
     <script src="/js/script.js"></script>
