--- a/stepx/src/main/resources/templates/header.html
+++ b/stepx/src/main/resources/templates/header.html
@@ -346,7 +346,7 @@
           </div>
           <div class="modal-footer mt-5 d-flex justify-content-center">
             <button type="button" class="btn btn-red hvr-sweep-to-right dark-sweep">Login</button>
-            <a href="register-user.html">
+            <a href="/register-user">
                   <button type="button" class="btn btn-outline-gray hvr-sweep-to-right dark-sweep" id="registerButton"> Register</button>
                 </a>
           </div>
@@ -358,65 +358,9 @@
 <!-- Login -->
 
 <header id="header" class="site-header text-black">
-  <div class="header-top border-bottom py-2">
-    <div class="container-lg">
-      <div class="row justify-content-evenly">
-        <div class="col">
-          <ul class="social-links list-unstyled d-flex m-0">
-            <li class="pe-2">
-              <a href="#">
-                <svg class="facebook" width="20" height="20">
-                  <use xlink:href="#facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="pe-2">
-              <a href="#">
-                <svg class="instagram" width="20" height="20">
-                  <use xlink:href="#instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="pe-2">
-              <a href="#">
-                <svg class="youtube" width="20" height="20">
-                  <use xlink:href="#youtube"></use>
-                </svg>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <svg class="pinterest" width="20" height="20">
-                  <use xlink:href="#pinterest"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-        </div>
-        <div class="col d-none d-md-block">
-          <p class="text-center text-black m-0"><strong>Special Offer</strong>: Free Shipping on all the orders above $100
-          </p>
-        </div>
-        <div class="col">
-          <ul class="d-flex justify-content-end gap-3 list-unstyled m-0">
-            <li>
-              <a href="#">Contact</a>
-            </li>
-            <li>
-              <a href="#">Cart</a>
-            </li>
-            <li>
-              <a href="#">Login</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div>
-  
   <nav id="header-nav" class="navbar navbar-expand-lg">
     <div class="container-lg">
-      <a class="navbar-brand d-flex align-items-center" href="index.html">
+      <a class="navbar-brand d-flex align-items-center" href="/index">
         <div class="logo-wrapper">
           <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" width="200" height="75" viewBox="0 0 3600 800">
             <g transform="translate(300, 120) scale(6.2,6.2)">
@@ -448,47 +392,19 @@
         <div class="offcanvas-body">
           <ul id="navbar" class="navbar-nav fw-bold justify-content-end align-items-center flex-grow-1">
             <li class="nav-item">
-              <a class="nav-link me-5" href="index.html">HOME</a>
+              <a class="nav-link me-5" href="/index">HOME</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link me-5" href="shop.html">Shop</a>
+              <a class="nav-link me-5" href="/shop">Shop</a>
             </li>
            
-            <li class="nav-item dropdown">
-              <a class="nav-link me-5 active dropdown-toggle border-0" href="#" data-bs-toggle="dropdown"
-                aria-expanded="false">Page</a>
-              <ul class="dropdown-menu fw-bold">
-                <li>
-                  <a href="about-us.html" class="dropdown-item">About Us</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="shop.html">Shop </a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="blog.html">Blog </a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="single-product.html">Single Product </a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="single-post.html">Single Post </a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="styles.html">Styles</a>
-                </li>
-                
-              </ul>
-            </li>
-            
-            
-            
           </ul>
         </div>
       </div>
       <div class="user-items ps-0 ps-md-5">
         <ul class="d-flex justify-content-end list-unstyled align-item-center m-0">
           <li class="pe-3">
-            <a href="admin-pannel.html" class="border-0">
+            <a href="/admin-pannel" class="border-0">
               
                 <svg viewBox="0 0 24 24" class="chart" width="24" height="24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M17.8321 9.5547C18.1384 9.09517 18.0142 8.4743 17.5547 8.16795C17.0952 7.8616 16.4743 7.98577 16.168 8.4453L13.3925 12.6085L10.0529 10.3542C9.421 9.92768 8.55941 10.1339 8.18917 10.8004L6.12584 14.5144C5.85763 14.9971 6.03157 15.6059 6.51436 15.8742C6.99714 16.1424 7.60594 15.9684 7.87416 15.4856L9.56672 12.439L12.8571 14.66C13.4546 15.0634 14.2662 14.9035 14.6661 14.3036L17.8321 9.5547Z" fill="#000000"></path> <path fill-rule="evenodd" clip-rule="evenodd" d="M7 2C4.23858 2 2 4.23858 2 7V17C2 19.7614 4.23858 22 7 22H17C19.7614 22 22 19.7614 22 17V7C22 4.23858 19.7614 2 17 2H7ZM4 7C4 5.34315 5.34315 4 7 4H17C18.6569 4 20 5.34315 20 7V17C20 18.6569 18.6569 20 17 20H7C5.34315 20 4 18.6569 4 17V7Z" fill="#000000"></path> </g></svg>
               
