--- a/stepx/src/main/resources/templates/register-user.html
+++ b/stepx/src/main/resources/templates/register-user.html
@@ -65,7 +65,9 @@
 
               <div class="d-grid gap-2 mt-4">
                 <button type="submit" class="btn btn-success hvr-sweep-to-right dark-sweep">Register account</button>
-                <button type="button" class="btn btn-outline-gray hvr-sweep-to-right dark-sweep">Cancel</button>
+                <a href="/index">
+                  <button type="button" class="btn btn-outline-gray hvr-sweep-to-right dark-sweep" style="width: 100%;">Cancel</button>
+                </a>
               </div>
             </form>
           </div>
