--- a/stepx/src/main/resources/templates/index.html
+++ b/stepx/src/main/resources/templates/index.html
@@ -30,7 +30,7 @@
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <div class="card d-flex flex-row align-items-end border-0 large jarallax-keep-img">
-              <img src="/images/product-large-5.jpg" alt="shoes" class="img-fluid jarallax-img">
+              <img src="/images/card-image1.jpg" alt="shoes" class="img-fluid jarallax-img">
               <div class="cart-concern p-3 m-3 p-lg-5 m-lg-5">
                 <h2 class="card-title display-3 light">Urban Shoes</h2>
                 <a href="/shop"
@@ -247,23 +247,23 @@
       <div class="row">
         <div class="col-lg-6 col-md-6 mb-4">
           <div class="collection-card card border-0 d-flex flex-row align-items-end jarallax-keep-img">
-            <img src="images/collection-item1.jpg" alt="product-item" class="border-rounded-10 img-fluid jarallax-img">
+            <img src="/images/collection-item1.jpg" alt="product-item" class="border-rounded-10 img-fluid jarallax-img">
             <div class="card-detail p-3 m-3 p-lg-5 m-lg-5">
               <h3 class="card-title display-3">
                 <a href="#">Adidas Collection</a>
               </h3>
-              <a href="shop.html" class="text-uppercase mt-3 d-inline-block text-hover fw-bold">Shop Now</a>
+              <a href="/shop" class="text-uppercase mt-3 d-inline-block text-hover fw-bold">Shop Now</a>
             </div>
           </div>
         </div>
         <div class="col-lg-6 col-md-6">
           <div class="collection-card card border-0 d-flex flex-row jarallax-keep-img">
-            <img src="images/collection-item2.jpg" alt="product-item" class="border-rounded-10 img-fluid jarallax-img">
+            <img src="/images/collection-item2.jpg" alt="product-item" class="border-rounded-10 img-fluid jarallax-img">
             <div class="card-detail p-3 m-3 p-lg-5 m-lg-5">
               <h3 class="card-title display-3">
                 <a href="#">Nike New Collection</a>
               </h3>
-              <a href="shop.html" class="text-uppercase mt-3 d-inline-block text-hover fw-bold">Shop Now</a>
+              <a href="/shop" class="text-uppercase mt-3 d-inline-block text-hover fw-bold">Shop Now</a>
             </div>
           </div>
         </div>
