--- a/stepx/src/main/resources/templates/shop.html
+++ b/stepx/src/main/resources/templates/shop.html
@@ -152,10 +152,12 @@
             </div>
           </div>
           <div class="product-content product-store d-flex justify-content-between flex-wrap">
+            <!-- Product Card element-->
+            {{#shoes}}
             <div class="col-lg-4 col-md-12 col-sm-12 mb-4 pe-3">
               <div class="product-card position-relative">
                 <div class="card-img">
-                  <img src="images/card-large-item1.jpg" alt="product-item" class="product-image img-fluid">
+                  <img src="{{images.0}}" alt="product-item" class="product-image img-fluid">
                   <div class="cart-concern position-absolute d-flex justify-content-center">
                   <div class="cart-button d-flex gap-2 justify-content-center align-items-center">
                     <!--Delete Buttom-->
@@ -165,33 +167,14 @@
                         </svg>
                       </button>
                       <!--Edit Buttom-->
-                    <a href="/edit-product.html">
-                      <button type="button" class="btn btn-light" data-bs-target="#modaltoggle" data-bs-toggle="modal">
+                    <a href="/edit-product/{{id}}">
+                      <button type="button" class="btn btn-light">
                         <svg class="icon-pencil">
                           <use xlink:href="#icon-pencil"></use>
                         </svg>
                       </button>
                     </a>
-
-                  </div>
-                </div>
-                  <!-- cart-concern -->
-                </div>
-                <div class="card-detail d-flex justify-content-between align-items-center mt-3">
-                  <h3 class="card-title fs-6 fw-normal m-0">
-                    <a href="single-product.html">Running shoes for men</a>
-                  </h3>
-                  <span class="card-price fw-bold">$99</span>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-12 col-sm-12 mb-4 pe-3">
-              <div class="product-card position-relative">
-                <div class="card-img">
-                  <img src="images/card-large-item2.jpg" alt="product-item" class="product-image img-fluid">
-                  <div class="cart-concern position-absolute d-flex justify-content-center">
-                  <div class="cart-button d-flex gap-2 justify-content-center align-items-center">
-
+                    
                     <button type="button" class="btn btn-light" data-bs-toggle="modal" data-bs-target="#modallong">
                       <svg class="shopping-carriage">
                         <use xlink:href="#shopping-carriage"></use>
@@ -205,214 +188,21 @@
                         </svg>
                       </button>
                     </a>
+
                   </div>
                 </div>
                   <!-- cart-concern -->
                 </div>
                 <div class="card-detail d-flex justify-content-between align-items-center mt-3">
                   <h3 class="card-title fs-6 fw-normal m-0">
-                    <a href="single-product.html">Running shoes for men</a>
+                    <a href="single-product.html">{{name}}</a>
                   </h3>
-                  <span class="card-price fw-bold">$99</span>
+                  <span class="card-price fw-bold">${{price}}</span>
                 </div>
               </div>
             </div>
-            <div class="col-lg-4 col-md-12 col-sm-12 mb-4 pe-3">
-              <div class="product-card position-relative">
-                <div class="card-img">
-                  <img src="images/card-large-item3.jpg" alt="product-item" class="product-image img-fluid">
-                  <div class="cart-concern position-absolute d-flex justify-content-center">
-                  <div class="cart-button d-flex gap-2 justify-content-center align-items-center">
-                    <button type="button" class="btn btn-light" data-bs-toggle="modal" data-bs-target="#modallong">
-                      <svg class="shopping-carriage">
-                        <use xlink:href="#shopping-carriage"></use>
-                      </svg>
-                    </button>
-                    <button type="button" class="btn btn-light" data-bs-target="#modaltoggle" data-bs-toggle="modal">
-                      <svg class="quick-view">
-                        <use xlink:href="#quick-view"></use>
-                      </svg>
-                    </button>
-                  </div>
-                </div>
-                  <!-- cart-concern -->
-                </div>
-                <div class="card-detail d-flex justify-content-between align-items-center mt-3">
-                  <h3 class="card-title fs-6 fw-normal m-0">
-                    <a href="single-product.html">Running shoes for men</a>
-                  </h3>
-                  <span class="card-price fw-bold">$99</span>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-12 col-sm-12 mb-4 pe-3">
-              <div class="product-card position-relative">
-                <div class="card-img">
-                  <img src="images/card-large-item4.jpg" alt="product-item" class="product-image img-fluid">
-                  <div class="cart-concern position-absolute d-flex justify-content-center">
-                  <div class="cart-button d-flex gap-2 justify-content-center align-items-center">
-                    <button type="button" class="btn btn-light" data-bs-toggle="modal" data-bs-target="#modallong">
-                      <svg class="shopping-carriage">
-                        <use xlink:href="#shopping-carriage"></use>
-                      </svg>
-                    </button>
-                    <button type="button" class="btn btn-light" data-bs-target="#modaltoggle" data-bs-toggle="modal">
-                      <svg class="quick-view">
-                        <use xlink:href="#quick-view"></use>
-                      </svg>
-                    </button>
-                  </div>
-                </div>
-                  <!-- cart-concern -->
-                </div>
-                <div class="card-detail d-flex justify-content-between align-items-center mt-3">
-                  <h3 class="card-title fs-6 fw-normal m-0">
-                    <a href="single-product.html">Running shoes for men</a>
-                  </h3>
-                  <span class="card-price fw-bold">$99</span>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-12 col-sm-12 mb-4 pe-3">
-              <div class="product-card position-relative">
-                <div class="card-img">
-                  <img src="images/card-large-item5.jpg" alt="product-item" class="product-image img-fluid">
-                  <div class="cart-concern position-absolute d-flex justify-content-center">
-                  <div class="cart-button d-flex gap-2 justify-content-center align-items-center">
-                    <button type="button" class="btn btn-light" data-bs-toggle="modal" data-bs-target="#modallong">
-                      <svg class="shopping-carriage">
-                        <use xlink:href="#shopping-carriage"></use>
-                      </svg>
-                    </button>
-                    <button type="button" class="btn btn-light" data-bs-target="#modaltoggle" data-bs-toggle="modal">
-                      <svg class="quick-view">
-                        <use xlink:href="#quick-view"></use>
-                      </svg>
-                    </button>
-                  </div>
-                </div>
-                  <!-- cart-concern -->
-                </div>
-                <div class="card-detail d-flex justify-content-between align-items-center mt-3">
-                  <h3 class="card-title fs-6 fw-normal m-0">
-                    <a href="single-product.html">Running shoes for men</a>
-                  </h3>
-                  <span class="card-price fw-bold">$99</span>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-12 col-sm-12 mb-4 pe-3">
-              <div class="product-card position-relative">
-                <div class="card-img">
-                  <img src="images/card-large-item6.jpg" alt="product-item" class="product-image img-fluid">
-                  <div class="cart-concern position-absolute d-flex justify-content-center">
-                  <div class="cart-button d-flex gap-2 justify-content-center align-items-center">
-                    <button type="button" class="btn btn-light" data-bs-toggle="modal" data-bs-target="#modallong">
-                      <svg class="shopping-carriage">
-                        <use xlink:href="#shopping-carriage"></use>
-                      </svg>
-                    </button>
-                    <button type="button" class="btn btn-light" data-bs-target="#modaltoggle" data-bs-toggle="modal">
-                      <svg class="quick-view">
-                        <use xlink:href="#quick-view"></use>
-                      </svg>
-                    </button>
-                  </div>
-                </div>
-                  <!-- cart-concern -->
-                </div>
-                <div class="card-detail d-flex justify-content-between align-items-center mt-3">
-                  <h3 class="card-title fs-6 fw-normal m-0">
-                    <a href="single-product.html">Running shoes for men</a>
-                  </h3>
-                  <span class="card-price fw-bold">$99</span>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-12 col-sm-12 mb-4 pe-3">
-              <div class="product-card position-relative">
-                <div class="card-img">
-                  <img src="images/card-large-item7.jpg" alt="product-item" class="product-image img-fluid">
-                  <div class="cart-concern position-absolute d-flex justify-content-center">
-                  <div class="cart-button d-flex gap-2 justify-content-center align-items-center">
-                    <button type="button" class="btn btn-light" data-bs-toggle="modal" data-bs-target="#modallong">
-                      <svg class="shopping-carriage">
-                        <use xlink:href="#shopping-carriage"></use>
-                      </svg>
-                    </button>
-                    <button type="button" class="btn btn-light" data-bs-target="#modaltoggle" data-bs-toggle="modal">
-                      <svg class="quick-view">
-                        <use xlink:href="#quick-view"></use>
-                      </svg>
-                    </button>
-                  </div>
-                </div>
-                  <!-- cart-concern -->
-                </div>
-                <div class="card-detail d-flex justify-content-between align-items-center mt-3">
-                  <h3 class="card-title fs-6 fw-normal m-0">
-                    <a href="single-product.html">Running shoes for men</a>
-                  </h3>
-                  <span class="card-price fw-bold">$99</span>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-12 col-sm-12 mb-4 pe-3">
-              <div class="product-card position-relative">
-                <div class="card-img">
-                  <img src="images/card-large-item8.jpg" alt="product-item" class="product-image img-fluid">
-                  <div class="cart-concern position-absolute d-flex justify-content-center">
-                  <div class="cart-button d-flex gap-2 justify-content-center align-items-center">
-                    <button type="button" class="btn btn-light" data-bs-toggle="modal" data-bs-target="#modallong">
-                      <svg class="shopping-carriage">
-                        <use xlink:href="#shopping-carriage"></use>
-                      </svg>
-                    </button>
-                    <button type="button" class="btn btn-light" data-bs-target="#modaltoggle" data-bs-toggle="modal">
-                      <svg class="quick-view">
-                        <use xlink:href="#quick-view"></use>
-                      </svg>
-                    </button>
-                  </div>
-                </div>
-                  <!-- cart-concern -->
-                </div>
-                <div class="card-detail d-flex justify-content-between align-items-center mt-3">
-                  <h3 class="card-title fs-6 fw-normal m-0">
-                    <a href="single-product.html">Running shoes for men</a>
-                  </h3>
-                  <span class="card-price fw-bold">$99</span>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-12 col-sm-12 mb-4 pe-3">
-              <div class="product-card position-relative">
-                <div class="card-img">
-                  <img src="images/card-large-item9.jpg" alt="product-item" class="product-image img-fluid">
-                  <div class="cart-concern position-absolute d-flex justify-content-center">
-                  <div class="cart-button d-flex gap-2 justify-content-center align-items-center">
-                    <button type="button" class="btn btn-light" data-bs-toggle="modal" data-bs-target="#modallong">
-                      <svg class="shopping-carriage">
-                        <use xlink:href="#shopping-carriage"></use>
-                      </svg>
-                    </button>
-                    <button type="button" class="btn btn-light" data-bs-target="#modaltoggle" data-bs-toggle="modal">
-                      <svg class="quick-view">
-                        <use xlink:href="#quick-view"></use>
-                      </svg>
-                    </button>
-                  </div>
-                </div>
-                  <!-- cart-concern -->
-                </div>
-                <div class="card-detail d-flex justify-content-between align-items-center mt-3">
-                  <h3 class="card-title fs-6 fw-normal m-0">
-                    <a href="single-product.html">Running shoes for men</a>
-                  </h3>
-                  <span class="card-price fw-bold">$99</span>
-                </div>
-              </div>
-            </div>
+            {{/shoes}}
+            <!--end of product card element-->
           </div>
         </main>
         
