individual-product template generated with mustache

--- a/stepx/src/main/resources/templates/shop.html
+++ b/stepx/src/main/resources/templates/shop.html
@@ -181,7 +181,7 @@
                       </svg>
                     </button>
                                        
-                    <a href="/single-product.html">
+                    <a href="/single-product/{{id}}">
                       <button type="button" class="btn btn-light">
                         <svg class="quick-view">
                           <use xlink:href="#quick-view"></use>
