--- a/stepx/src/main/resources/templates/single-product.html
+++ b/stepx/src/main/resources/templates/single-product.html
@@ -28,7 +28,9 @@
 
   {{>header}}
 
+  
   <section id="selling-product" class="single-product py-2 my-2 py-md-5 my-md-5">
+    {{#product}}
     <div class="container">
       <div class="row g-5">
         <div class="col-lg-8">
@@ -38,25 +40,18 @@
               <div class="swiper product-thumbnail-slider">
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">
-                    <img src="images/product-thumbnail-1.jpg" alt="image alternative text"
+                    <img src="{{images.0}}" alt="image alternative text"
                       class="thumb-image img-fluid">
                   </div>
                   <div class="swiper-slide">
-                    <img src="images/product-thumbnail-2.jpg" alt="image alternative text"
+                    <img src="{{images.0}}" alt="image alternative text"
                       class="thumb-image img-fluid">
                   </div>
                   <div class="swiper-slide">
-                    <img src="images/product-thumbnail-3.jpg" alt="image alternative text"
+                    <img src="{{images.0}}" alt="image alternative text"
                       class="thumb-image img-fluid">
                   </div>
-                  <div class="swiper-slide">
-                    <img src="images/product-thumbnail-4.jpg" alt="image alternative text"
-                      class="thumb-image img-fluid">
-                  </div>
-                  <div class="swiper-slide">
-                    <img src="images/product-thumbnail-5.jpg" alt="image alternative text"
-                      class="thumb-image img-fluid">
-                  </div>
+
                 </div>
               </div>
               <!-- / product-thumbnail-slider -->
@@ -67,23 +62,15 @@
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">
                     <div class="image-zoom" data-scale="2.5" data-image="images/product-large-1.jpg"><img
-                        src="images/product-large-1.jpg" alt="product-large" class="img-fluid"></div>
+                        src="{{images.0}}" alt="product-large" class="img-fluid"></div>
                   </div>
                   <div class="swiper-slide">
                     <div class="image-zoom" data-scale="2.5" data-image="images/product-large-2.jpg"><img
-                        src="images/product-large-2.jpg" alt="product-large" class="img-fluid"></div>
+                        src="{{images.0}}" alt="product-large" class="img-fluid"></div>
                   </div>
                   <div class="swiper-slide">
                     <div class="image-zoom" data-scale="2.5" data-image="images/product-large-3.jpg"><img
-                        src="images/product-large-3.jpg" alt="product-large" class="img-fluid"></div>
-                  </div>
-                  <div class="swiper-slide">
-                    <div class="image-zoom" data-scale="2.5" data-image="images/product-large-4.jpg"><img
-                        src="images/product-large-4.jpg" alt="product-large" class="img-fluid"></div>
-                  </div>
-                  <div class="swiper-slide">
-                    <div class="image-zoom" data-scale="2.5" data-image="images/product-large-5.jpg"><img
-                        src="images/product-large-5.jpg" alt="product-large" class="img-fluid"></div>
+                        src="{{images.0}}" alt="product-large" class="img-fluid"></div>
                   </div>
                 </div>
                 <div class="swiper-pagination"></div>
@@ -95,14 +82,12 @@
         <div class="col-lg-4">
           <div class="product-info">
             <div class="element-header">
-              <h3 itemprop="name" class="display-6 fw-bold">Nike Shoes</h3>
+              <h3 itemprop="name" class="display-6 fw-bold">{{name}}</h3>
             </div>
             <div class="product-price py-3">
-              <strong class="fs-5 fw-bold">$99</strong>
+              <strong class="fs-5 fw-bold">${{price}}</strong>
             </div>
-            <p>This Shoes is comfortable for wearing for men. imperdiet nulla molestie ac vulputate scelerisque amet.
-              Bibendum adipiscing platea blandit sit sed quam semper rhoncus. Diam ultrices maecenas consequat eu tortor
-              orci.</p>
+            <p>{{shortDescription}}</p>
             <div class="cart-wrap padding-small">
               <div class="swatch product-select" data-option-index="1">
                 <h5 class="widget-title text-decoration-underline pe-2">Size:</h5>
@@ -157,14 +142,14 @@
                     <a href="#">Men</a>,
                   </li>
                   <li data-value="S" class="select-item">
-                    <a href="#">Casual</a>
+                    <a href="#">{{category}}</a>
                   </li>
                 </ul>
               </div>
               <div class="meta-item d-flex align-items-baseline">
                 <h5 class="widget-title text-decoration-underline pe-2">Brand:</h5>
                 <ul class="select-list list-unstyled d-flex">
-                  <li data-value="S" class="select-item">Nike</li>
+                  <li data-value="S" class="select-item">{{brand}}</li>
                 </ul>
               </div>
             </div>
@@ -172,9 +157,11 @@
         </div>
       </div>
     </div>
+    {{/product}}
   </section>
 
   <section class="product-info-tabs">
+    {{#product}}
     <div class="container">
       <div class="row">
         <div class="tabs-listing">
@@ -192,11 +179,7 @@
             <div class="tab-pane fade show active padding-small" id="nav-home" role="tabpanel"
               aria-labelledby="nav-home-tab">
               <p>Product Description</p>
-              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros.
-                Nullam malesuada erat ut turpis. Suspendisse urna viverra non, semper suscipit, posuere a, pede. Donec
-                nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci. Aenean dignissim
-                pellentesque felis. Phasellus ultrices nulla quis nibh. Quisque a lectus. Donec consectetuer ligula
-                vulputate sem tristique cursus.</p>
+              <p>{{longDescription}}.</p>
               <ul style="list-style-type:disc;" class="list-unstyled ps-4">
                 <li>Donec nec justo eget felis facilisis fermentum.</li>
                 <li>Suspendisse urna viverra non, semper suscipit pede.</li>
@@ -323,6 +306,7 @@
         </div>
       </div>
     </div>
+    {{/product}}
   </section>
 
   {{>footer}}
