single-product test

--- a/stepx/src/main/resources/templates/single-product.html
+++ b/stepx/src/main/resources/templates/single-product.html
@@ -40,13 +40,13 @@
               <div class="swiper product-thumbnail-slider">
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">
-                    <img src="{{images.0}}" alt="image alternative text" class="thumb-image img-fluid">
+                    <img src="/shop/{{id}}/image/1" alt="image alternative text" class="thumb-image img-fluid">
                   </div>
                   <div class="swiper-slide">
-                    <img src="{{images.1}}" alt="image alternative text" class="thumb-image img-fluid">
+                    <img src="/shop/{{id}}/image/2" alt="image alternative text" class="thumb-image img-fluid">
                   </div>
                   <div class="swiper-slide">
-                    <img src="{{images.0}}" alt="image alternative text" class="thumb-image img-fluid">
+                    <img src="/shop/{{id}}/image/3" alt="image alternative text" class="thumb-image img-fluid">
                   </div>
 
                 </div>
@@ -59,15 +59,15 @@
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">
                     <div class="image-zoom" data-scale="2.5" data-image="images/product-large-1.jpg"><img
-                        src="{{images.0}}" alt="product-large" class="img-fluid"></div>
+                        src="/shop/{{id}}/image/1" alt="product-large" class="img-fluid"></div>
                   </div>
                   <div class="swiper-slide">
                     <div class="image-zoom" data-scale="2.5" data-image="images/product-large-2.jpg"><img
-                        src="{{images.1}}" alt="product-large" class="img-fluid"></div>
+                        src="/shop/{{id}}/image/2" alt="product-large" class="img-fluid"></div>
                   </div>
                   <div class="swiper-slide">
                     <div class="image-zoom" data-scale="2.5" data-image="images/product-large-3.jpg"><img
-                        src="{{images.0}}" alt="product-large" class="img-fluid"></div>
+                        src="/shop/{{id}}/image/3" alt="product-large" class="img-fluid"></div>
                   </div>
                 </div>
                 <div class="swiper-pagination"></div>
